--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,10 +22,9 @@ jobs:
           git lfs track ${{github.workspace}}/.next/*
           git add .gitattributes
       - name: Upload Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/download-artifact@v5
         with:
-          name: build-output
-          path: ${{github.workspace}}/out
+          name: install and build
       - name: deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
