--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: my-artifacts
-          path: .next
+          path: dist
       - name: deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
