--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,7 +25,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: my-artifacts
-          path: /home/runner/work/xinbianjiang.github.io/xinbianjiang.github.io/.next
+          path: .next
+          include-hidden-files: true
       - name: deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
